--- a/views/results.ejs
+++ b/views/results.ejs
@@ -14,6 +14,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Smt else <span class="sr-only">(current)</span></a>
+      </li>
       
   </div>
 </nav>
